@@ -115,7 +115,7 @@ CGI::Tiny's interface is a regular function called C<cgi> exported by default.
     # set up error handling on $cgi
     # inspect request data via $cgi
     # set response headers if needed via $cgi
-    # render response data with $cgi->render or $cgi->render_chunk
+    # render response with $cgi->render or $cgi->render_chunk
   };
 
 The code block is immediately run with C<$_> set to a CGI::Tiny object, which
@@ -862,7 +862,7 @@ effect after response headers have been rendered.
 
   $cgi = $cgi->set_response_charset('UTF-8');
 
-Set charset to use when rendering C<text>, C<html>, or C<xml> response data,
+Set charset to use when rendering C<text>, C<html>, or C<xml> response content,
 defaults to C<UTF-8>.
 
 =head3 add_response_header
@@ -982,18 +982,21 @@ to C<200>.
   $cgi = $cgi->render(file     => $filepath); # application/octet-stream
   $cgi = $cgi->render(redirect => $url);
 
-Renders response headers and then fixed-length response data of a type
+Renders response headers and then fixed-length response content of a type
 indicated by the first parameter, if any. A C<Content-Length> header will be
 set to the length of the encoded response content, and further calls to
 C<render> or L</"render_chunk"> will throw an exception. Use L</"render_chunk">
 instead to render without a C<Content-Length> header.
 
 The C<Content-Type> response header will be set according to
-L</"set_response_type">, or autodetected depending on the data type passed, or
-to C<application/octet-stream> if there is no more appropriate value.
+L</"set_response_type">, or autodetected depending on the data type of any
+non-empty response content passed.
 
 The C<Date> response header will be set to the current time as an HTTP date
 string if not set manually.
+
+If the L</"request_method"> is C<HEAD>, any provided response content will be
+ignored (other than redirect URLs) and C<Content-Length> will be set to 0.
 
 C<text>, C<html>, or C<xml> data is expected to be decoded Unicode characters,
 and will be encoded according to L</"set_response_charset"> (UTF-8 by default).
@@ -1023,9 +1026,9 @@ C<Content-Length> of 0, and it will not set a C<Content-Type> response header.
   $cgi = $cgi->render_chunk(handle => $filehandle); # application/octet-stream
 
 Renders response headers the first time it is called, and then chunked response
-data of a type indicated by the first parameter, if any. No C<Content-Length>
-header will be set, and C<render_chunk> may be called additional times with
-more response data.
+content of a type indicated by the first parameter, if any. No
+C<Content-Length> header will be set, and C<render_chunk> may be called
+additional times with more response content.
 
 C<render_chunk> does not impose a chunked response, it simply does not generate
 a C<Content-Length> header. For content where the total encoded content length
@@ -1037,10 +1040,15 @@ part.
 The C<Content-Type> response header will be set according to
 L</"set_response_type">, or autodetected depending on the data type passed in
 the first call to C<render_chunk>, or to C<application/octet-stream> if there
-is no more appropriate value.
+is no more appropriate value. It will be set even if no content is passed to
+the first C<render_chunk> call, in case content is rendered in subsequent
+calls.
 
 The C<Date> response header will be set to the current time as an HTTP date
 string if not set manually.
+
+If the L</"request_method"> is C<HEAD>, any provided response content will be
+ignored.
 
 C<text>, C<html>, or C<xml> data is expected to be decoded Unicode characters,
 and will be encoded according to L</"set_response_charset"> (UTF-8 by default).
@@ -1196,15 +1204,15 @@ and do not affect the text parameter accessors.
 
 CGI::Tiny decodes request query and body parameters to Unicode characters
 automatically, and L</"render">/L</"render_chunk"> provide methods to encode
-response data from Unicode characters to UTF-8 by default.
+response content from Unicode characters to UTF-8 by default.
 
 =item *
 
-In CGI.pm, response headers must be printed manually before any response data
-is printed to avoid malformed responses. In CGI::Tiny, the L</"render"> or
-L</"render_chunk"> methods are used to print response data, and automatically
-print response headers when first called. C<redirect> responses are also
-handled by L</"render">.
+In CGI.pm, response headers must be printed manually before any response
+content is printed to avoid malformed responses. In CGI::Tiny, the L</"render">
+or L</"render_chunk"> methods are used to print response content, and
+automatically print response headers when first called. C<redirect> responses
+are also handled by L</"render">.
 
 =item *
 
