@@ -1,5 +1,7 @@
 {{$NEXT}}
   - Add debugging commands for commandline convenience
+  - Ignore response content passed to render and render_chunk in HEAD requests
+  - Omit autodetected Content-Type header when rendering empty fixed-length responses
 
 0.014     2021-05-04 03:26:46 EDT
   - Remove headers_rendered method, instead pass rendered status to error handlers
